vertical stripes were deleted in html & css

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,5 +1,5 @@
-<section class="about-our-kitchen vertical-left-stripe vertical-right-stripe">
-  <div class="container vertical-mid-stripe">
+<section class="about-our-kitchen">
+  <div class="container">
     <h2 class="visually-hidden">About our kitchen</h2>
     <p class="about-kitchen__slogan">Amet minim mollit non</p>
     <h3 class="restaurant-logo">MIMIHO</h3>
