used a component <.logo> on my section's logo, by adding a class in html, removed dublicated css properties

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="visually-hidden">About our kitchen</h2>
     <p class="about-kitchen__slogan">Amet minim mollit non</p>
-    <h3 class="restaurant-logo">MIMIHO</h3>
+    <h3 class="logo restaurant-logo">MIMIHO</h3>
 
     <div>
       <div class="kitchen-card">
