add contacts anchors and cos link

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -7,7 +7,7 @@
       <address class="contacts__address">
         <ul class="contacts__list">
           <li class="contacts__item">
-            <span class="contacts__name">Ресторан</span
+            <span id="contact-rest" class="contacts__name">Ресторан</span
             ><a
               class="contacts__phone color-adress--desktop"
               href="tel:+380955559533"
@@ -17,7 +17,7 @@
             >
           </li>
           <li class="contacts__item contacts__item--hotel">
-            <span class="contacts__name">Готель</span>
+            <span id="contact-hotel" class="contacts__name">Готель</span>
             <div class="contacts__phone contacts__phone--twin">
               <a
                 class="contacts__hotel-phone contacts__phone--first color-adress--desktop"
