--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
                 <ul class="site-nav__wrap">
                     <li><a href="./restaurant.html" class="site-nav__link link">Ресторан</a></li>
                     <li><ul class="site-nav__contact-wrap">
-                        <li><a href="#" class="site-nav__icon-link link">
+                        <li><a href="#contact-rest" class="site-nav__icon-link link">
                             <svg class="site-nav__icon" width="24" height="24">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>
@@ -21,7 +21,7 @@
                 <ul class="site-nav__wrap">
                     <li><a href="./hotel.html" class="site-nav__link link">Готель</a></li>
                     <li><ul class="site-nav__contact-wrap">
-                        <li><a href="#"class="site-nav__icon-link link">
+                        <li><a href="#contact-hotel"class="site-nav__icon-link link">
                             <svg class="site-nav__icon" width="24" height="24">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>
@@ -35,7 +35,7 @@
     </nav>
     <ul class="cos__list list">
         <li class="soc__item">
-            <a href="" class="soc__link link" target="_blank"
+            <a href="https://www.instagram.com/" class="soc__link link" target="_blank"
                   rel="noopener noreferrer nofollow">
                 <svg class="soc__icon" width="24" height="24" >
                     <use href="./images/sprite.svg#icon-instagram"></use>
@@ -43,7 +43,7 @@
             </a>
         </li>
         <li class="soc__item">
-            <a href="" class="soc__link link" target="_blank"
+            <a href="https://www.facebook.com/" class="soc__link link" target="_blank"
                   rel="noopener noreferrer nofollow">
                 <svg class="soc__icon" width="24" height="24" >
                     <use href="./images/sprite.svg#icon-facebook"></use>
@@ -51,7 +51,7 @@
             </a>
         </li>
         <li class="soc__item">
-            <a href="" class="soc__link link" target="_blank"
+            <a href="https://twitter.com/" class="soc__link link" target="_blank"
                   rel="noopener noreferrer nofollow">
                 <svg class="soc__icon" width="24" height="24" >
                     <use href="./images/sprite.svg#icon-telegram"></use>
