--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -41,6 +41,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: calc(24/20);
+  text-transform: uppercase;
   
   color: $colorBtnWhite;
   background: $colorBtnBlack;
