--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -5,27 +5,27 @@
 
   .container {
     position: relative;
-  }
-  padding-top: 16px;
-  padding-bottom: 20px;
-  @include tablet {
-    padding-top: 120px;
-    padding-bottom: 32px;
+    padding-top: 16px;
+    padding-bottom: 20px;
+    @include tablet {
+      padding-top: 120px;
+      padding-bottom: 32px;
+    }
   }
 }
 
 .about-kitchen__slogan {
-  margin-bottom: 12px;
+  margin-bottom: 13px;
   font-family: 'Times New Roman';
   font-style: normal;
   font-weight: 400;
   line-height: 1.15;
   font-size: 20px;
+  letter-spacing: 0;
   color: $colorTextSecondary;
   @include tablet {
     margin-bottom: 4px;
     font-size: 32px;
-    letter-spacing: 0;
   }
 }
 
@@ -41,11 +41,12 @@
 .kitchen-card {
   position: relative;
   display: flex;
-  margin-bottom: 32px;
 }
 
 .kitchen-card:first-child {
   flex-wrap: wrap;
+  margin-bottom: 32px;
+
   @include tablet {
     margin-bottom: 338px;
   }
@@ -82,6 +83,8 @@
 .kitchen-card:last-child {
   align-items: center;
   column-gap: 20px;
+  margin-bottom: 32px;
+
   @include tablet {
     margin-bottom: 154px;
   }
@@ -90,6 +93,7 @@
   }
   .kitchen-card__description {
     padding-bottom: 20px;
+    max-width: 163px;
     @include tablet {
       width: 312px;
       padding-bottom: 0;
