--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -1,4 +1,4 @@
-<section class="section--light">
+<section class="section-hotel section-hotel--lemon">
   <div class="container">
     <div class="room-wrap-top">
       <p class="hotel-pre-title">Amet minim mollit non</p>
@@ -36,67 +36,149 @@
         <img
           src="./images/hotel/hotel-1-mob.jpg"
           alt="фото номера в готелі"
-          width="246"
+          sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
         />
       </picture>
     </div>
-    <div data-slick='{"slidesToShow": 2, "slidesToScroll": 2}'>
-      <div>
-        <picture
-          ><source
-            srcset="
-              ./images/hotel/hotel-2-desk.jpg    1x,
-              ./images/hotel/hotel-2-desk-2x.jpg 2x
-            "
-            media="(min-width: 1280px)" />
-          <source
-            srcset="
-              ./images/hotel/hotel-2-tab.jpg    1x,
-              ./images/hotel/hotel-2-tab-2x.jpg 2x
-            "
-            media="(min-width: 1024px)" />
-          <source
-            srcset="
-              ./images/hotel/hotel-2-mob.jpg    1x,
-              ./images/hotel/hotel-2-mob-2x.jpg 2x
-            "
-            media="(max-width: 1023px)" />
-          <img
-            src="./images/hotel/hotel-2-mob.jpg"
-            alt="фото умивальника"
-            width="194"
-        /></picture>
-      </div>
-      <div>
-        <picture
-          ><source
-            srcset="
-              ./images/hotel/hotel-3-desk.jpg    1x,
-              ./images/hotel/hotel-3-desk-2x.jpg 2x
-            "
-            media="(min-width: 1280px)" />
-          <source
-            srcset="
-              ./images/hotel/hotel-3-tab.jpg    1x,
-              ./images/hotel/hotel-3-tab-2x.jpg 2x
-            "
-            media="(min-width: 1024px)" />
-          <source
-            srcset="
-              ./images/hotel/hotel-3-mob.jpg    1x,
-              ./images/hotel/hotel-3-mob-2x.jpg 2x
-            "
-            media="(max-width: 1023px)" />
-          <img
-            src="./images/hotel/hotel-3-mob.jpg"
-            alt="фото чашки на підвіконні"
-            width="194"
-        /></picture>
+    <div class="room-slider-thumb">
+      <div class="fade room-slider">
+        <div>
+          <picture
+            ><source
+              srcset="
+                ./images/sliders/slider-2-desk.jpg    1x,
+                ./images/sliders/slider-2-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-2-tab.jpg    1x,
+                ./images/sliders/slider-2-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-2-tab.jpg    1x,
+                ./images/sliders/slider-2-tab-2x.jpg 2x
+              "
+              media="(max-width: 1023px)" />
+            <img
+              src="./images/sliders/slider-2-mob.jpg"
+              alt="біла ванна"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+          /></picture>
+        </div>
+        <div>
+          <picture
+            ><source
+              srcset="
+                ./images/sliders/slider-4-desk.jpg    1x,
+                ./images/sliders/slider-4-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-4-tab.jpg    1x,
+                ./images/sliders/slider-4-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-4-tab.jpg    1x,
+                ./images/sliders/slider-4-tab-2x.jpg 2x
+              "
+              media="(max-width: 1023px)" />
+            <img
+              src="./images/sliders/slider-4-mob.jpg"
+              alt="білий умивальник"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+          /></picture>
+        </div>
+        <div>
+          <picture
+            ><source
+              srcset="
+                ./images/sliders/slider-10-desk.jpg    1x,
+                ./images/sliders/slider-10-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-10-tab.jpg    1x,
+                ./images/sliders/slider-10-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-10-tab.jpg    1x,
+                ./images/sliders/slider-10-tab-2x.jpg 2x
+              "
+              media="(max-width: 1023px)" />
+            <img
+              src="./images/sliders/slider-10-mob.jpg"
+              alt="крем та рушник"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+          /></picture>
+        </div>
+        <div>
+          <picture
+            ><source
+              srcset="
+                ./images/sliders/slider-12-desk.jpg    1x,
+                ./images/sliders/slider-12-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-12-tab.jpg    1x,
+                ./images/sliders/slider-12-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-12-tab.jpg    1x,
+                ./images/sliders/slider-12-tab-2x.jpg 2x
+              "
+              media="(max-width: 1023px)" />
+            <img
+              src="./images/sliders/slider-12-mob.jpg"
+              alt="біла раковина"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+          /></picture>
+        </div>
+        <div>
+          <picture
+            ><source
+              srcset="
+                ./images/sliders/slider-13-desk.jpg    1x,
+                ./images/sliders/slider-13-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-13-tab.jpg    1x,
+                ./images/sliders/slider-13-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)" />
+            <source
+              srcset="
+                ./images/sliders/slider-13-tab.jpg    1x,
+                ./images/sliders/slider-13-tab-2x.jpg 2x
+              "
+              media="(max-width: 1023px)" />
+            <img
+              src="./images/sliders/slider-13-mob.jpg"
+              alt="сіра раковина"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+          /></picture>
+        </div>
       </div>
     </div>
     <div class="room-wrap-bottom">
-      <a href="./room-for-2.html" class="btn hotel-link">Детальніше</a>
-      <button type="button" class="btn" data-modal-open>
+      <a href="./room-for-2.html" class="btn btn--hotel-and-rest hotel-link"
+        >Детальніше</a
+      >
+      <button type="button" class="btn btn--hotel-and-rest" data-modal-open>
         Переглянути ціни
       </button>
     </div>
