--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,5 +1,6 @@
 .logo {
   font-family: 'Film P3';
+  text-transform: uppercase;
   @include font(700, 40px, 1.08, 0.3em);
   color: $colorLogoWhite;
 }
