--- a/src/sass/pages/hotel/_room-for-2.scss
+++ b/src/sass/pages/hotel/_room-for-2.scss
@@ -4,35 +4,73 @@
 .hotel-pre-title {
   font-family: 'Times New Roman';
   font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 1.15;
+  @include font(400, 20px, 1.15, null);
   color: #b4b4b4;
   margin-bottom: 8px;
+
+  @include tablet {
+    @include font(400, 32px, 1.16, null);
+  }
+
+  @include desktop {
+    // font-size: 36px;
+  }
 }
 
 .hotel-logo {
   color: #494848;
   text-transform: uppercase;
   margin-bottom: 32px;
+
+  @include tablet {
+    @include font(700, 64px, 1.08, 0.3em);
+  }
+
+  @include desktop {
+    // font-size: 36px;
+  }
 }
 
 .room-title {
   text-transform: uppercase;
-  margin-bottom: 12px;
+  margin-top: 32px;
 }
 
 .hotel-text {
   width: 258px;
   height: 76px;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 15px;
+  @include font(600, 12px, 1.25, 0.02em);
   color: #5f5f5f;
-  margin-bottom: 32px;
+  margin-top: 12px;
+
+  @include tablet {
+    width: 439px;
+    height: 80px;
+    @include font(600, 16px, 1.25, 0.02em);
+  }
+
+  @include desktop {
+    // font-size: 36px;
+  }
 }
 
 .room-wrap-center {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 32px;
+}
+
+.room-slider-thumb {
+  position: relative;
+  height: 298px;
+}
+
+.room-slider {
+  display: flex;
+  gap: 16px;
+  margin-top: 32px;
+  position: absolute;
+  left: -40%;
 }
 
 .room-wrap-bottom {
@@ -40,6 +78,7 @@
   align-items: center;
   flex-direction: column;
   gap: 16px;
+  margin-top: 32px;
 }
 
 .hotel-link {
