--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -95,6 +95,7 @@
     padding-bottom: 20px;
     max-width: 163px;
     @include tablet {
+      max-width: 100%;
       width: 312px;
       padding-bottom: 0;
       margin-left: auto;
@@ -108,6 +109,7 @@
     @include tablet {
       position: absolute;
       left: 0;
+      transform: translateY(-6px);
     }
     @include desktop {
       top: -188px;
