--- a/src/sass/pages/hotel/_room-for-2.scss
+++ b/src/sass/pages/hotel/_room-for-2.scss
@@ -60,17 +60,17 @@
   margin-top: 32px;
 }
 
+.room-wrap-bottom {
+}
+
 .room-slider-thumb {
-  position: relative;
-  height: 298px;
+  margin-right: 115px;
 }
 
 .room-slider {
   display: flex;
   gap: 16px;
   margin-top: 32px;
-  position: absolute;
-  left: -40%;
 }
 
 .room-wrap-bottom {
