--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -3,66 +3,163 @@
     <div class="fade">
       <div>
         <picture>
-          <source srcset="
-                                                    ./images/room/room-1-desk.jpg 1x,
-                                                    ./images/room/room-1-desk-2x.jpg 2x
-                                                  " media="(min-width: 1280px)" />
-          <source srcset="
-                                                    ./images/room/room-1-tab.jpg 1x,
-                                                    ./images/room/room-1-tab-2x.jpg 2x
-                                                  " media="(min-width: 1024px)" />
-          <source srcset="
-                                                    ./images/room/room-1-mob.jpg 1x,
-                                                    ./images/room/room-1-mob-2x.jpg 2x
-                                                  " media="(min-width: 414px)" />
-          <img src="./images/room/room-1-desk.jpg" width="100%" alt="Дизай першої кімнати">
+          <source
+            srcset="
+              ./images/room/room-1-desk.jpg    1x,
+              ./images/room/room-1-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/room/room-1-tab.jpg    1x,
+              ./images/room/room-1-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/room/room-1-mob.jpg    1x,
+              ./images/room/room-1-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="slider__img"
+            src="./images/room/room-1-mob.jpg"
+            width="100%"
+            alt="Дизайн першої кімнати"
+          />
         </picture>
-        <img src="./images/room/room-3-mob.jpg" width="100%" alt="">
       </div>
       <div>
-        <img src="./images/room/room-2-mob.jpg" width="100%" alt="">
+        <picture>
+          <source
+            srcset="
+              ./images/room/room-2-desk.jpg    1x,
+              ./images/room/room-2-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/room/room-2-tab.jpg    1x,
+              ./images/room/room-2-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/room/room-2-mob.jpg    1x,
+              ./images/room/room-2-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="slider__img"
+            src="./images/room/room-2-mob.jpg"
+            width="100%"
+            alt="Дизайн другої кімнати"
+          />
+        </picture>
       </div>
       <div>
-        <img src="./images/room/room-1-mob.jpg" width="100%" alt="">
+        <picture>
+          <source
+            srcset="
+              ./images/room/room-3-desk.jpg    1x,
+              ./images/room/room-3-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/room/room-3-tab.jpg    1x,
+              ./images/room/room-3-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/room/room-3-mob.jpg    1x,
+              ./images/room/room-3-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="slider__img"
+            src="./images/room/room-3-mob.jpg"
+            width="100%"
+            alt="Дизайн третьої кімнати"
+          />
+        </picture>
       </div>
     </div>
   </div>
   <div class="container luxe-hero__container">
-    <a class="luxe-hero__map luxe-hero__map--top" href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6" target="_blank"
-      rel="noopener noreferrer nofollow"><svg class="luxe-hero-map__icon" width="10" height="16">
-        <use href="./images/sprite.svg#icon-geo-marker12"></use>
-      </svg><span class="map__adress">Україна, м. Полтава,<br> вул. Маршала Бірюзова, 15</span></a>
+    <a
+      class="luxe-hero__map luxe-hero__map--top"
+      href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6"
+      target="_blank"
+      rel="noopener noreferrer nofollow"
+      ><svg class="luxe-hero-map__icon" width="10" height="16">
+        <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
+      ><span class="map__adress"
+        >Україна, м. Полтава,<br />
+        вул. Маршала Бірюзова, 15</span
+      ></a
+    >
     <div class="luxe-hero__wpap">
       <h2 class="luxe-hero__tittle">ДВОМІСНИЙ НОМЕР люкс</h2>
       <p class="luxe-hero__text">
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-        Velit officia consequat duis enim velit mollit. Exercitation veniam
-        consequat sunt nostrud amet.
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
       </p>
-      <a class="luxe-hero__map luxe-hero__map--bottom" href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6" target="_blank"
-        rel="noopener noreferrer nofollow"><svg class="luxe-hero-map__icon" width="12" height="20">
-          <use href="./images/sprite.svg#icon-geo-marker12"></use>
-        </svg><span class="map__adress">Україна, м. Полтава,<br> вул. Маршала Бірюзова, 15</span></a>
+      <a
+        class="luxe-hero__map luxe-hero__map--bottom"
+        href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6"
+        target="_blank"
+        rel="noopener noreferrer nofollow"
+        ><svg class="luxe-hero-map__icon" width="12" height="20">
+          <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
+        ><span class="map__adress"
+          >Україна, м. Полтава,<br />
+          вул. Маршала Бірюзова, 15</span
+        ></a
+      >
       <ul class="luxe-hero__social">
         <li class="luxe-hero__icon">
-          <a href="https://www.instagram.com/" class="luxe-hero_soclink" target="blank"
-            rel="noopener noreferrer nofollow">
+          <a
+            href="https://www.instagram.com/"
+            class="luxe-hero_soclink"
+            target="blank"
+            rel="noopener noreferrer nofollow"
+          >
             <svg class="icon-social--luxe" width="24" height="24">
               <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="luxe-hero__icon">
-          <a href="https://www.facebook.com/" class="luxe-hero_soclink" target="blank"
-            rel="noopener noreferrer nofollow">
+          <a
+            href="https://www.facebook.com/"
+            class="luxe-hero_soclink"
+            target="blank"
+            rel="noopener noreferrer nofollow"
+          >
             <svg class="icon-social--luxe" width="24" height="24">
               <use href="./images/sprite.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="luxe-hero__icon">
-          <a href="https://web.telegram.org/" class="luxe-hero_soclink" target="blank"
-            rel="noopener noreferrer nofollow">
+          <a
+            href="https://web.telegram.org/"
+            class="luxe-hero_soclink"
+            target="blank"
+            rel="noopener noreferrer nofollow"
+          >
             <svg class="icon-social--luxe" width="24" height="24">
               <use href="./images/sprite.svg#icon-telegram"></use>
             </svg>
@@ -70,7 +167,8 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="button luxe-hero__button" data-modal-open>Переглянути ціни</button>
+    <button type="button" class="button luxe-hero__button" data-modal-open>
+      Переглянути ціни
+    </button>
   </div>
-
 </section>
