--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -42,35 +42,9 @@
         </picture>
       </div>
     </div>
-    <div class="room-wrap-bottom">
+    <div class="hotel-wrap-bottom">
       <div class="room-slider-thumb">
         <div class="fade room-slider">
-          <div>
-            <picture
-              ><source
-                srcset="
-                  ./images/hotel/hotel-2-desk.jpg    1x,
-                  ./images/hotel/hotel-2-desk-2x.jpg 2x
-                "
-                media="(min-width: 1280px)" />
-              <source
-                srcset="
-                  ./images/hotel/hotel-2-tab.jpg    1x,
-                  ./images/hotel/hotel-2-tab-2x.jpg 2x
-                "
-                media="(min-width: 1024px)" />
-              <source
-                srcset="
-                  ./images/hotel/hotel-2-tab.jpg    1x,
-                  ./images/hotel/hotel-2-tab-2x.jpg 2x
-                "
-                media="(max-width: 1023px)" />
-              <img
-                src="./images/hotel/hotel-2-mob.jpg"
-                alt="біла ванна"
-                sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-            /></picture>
-          </div>
           <div>
             <picture
               ><source
@@ -93,6 +67,32 @@
                 media="(max-width: 1023px)" />
               <img
                 src="./images/hotel/hotel-3-mob.jpg"
+                alt="біла ванна"
+                sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            /></picture>
+          </div>
+          <div>
+            <picture
+              ><source
+                srcset="
+                  ./images/hotel/hotel-2-desk.jpg    1x,
+                  ./images/hotel/hotel-2-desk-2x.jpg 2x
+                "
+                media="(min-width: 1280px)" />
+              <source
+                srcset="
+                  ./images/hotel/hotel-2-tab.jpg    1x,
+                  ./images/hotel/hotel-2-tab-2x.jpg 2x
+                "
+                media="(min-width: 1024px)" />
+              <source
+                srcset="
+                  ./images/hotel/hotel-2-tab.jpg    1x,
+                  ./images/hotel/hotel-2-tab-2x.jpg 2x
+                "
+                media="(max-width: 1023px)" />
+              <img
+                src="./images/hotel/hotel-2-mob.jpg"
                 alt="біла ванна"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
@@ -233,7 +233,7 @@
         <a href="./room-for-2.html" class="btn btn--hotel-and-rest hotel-link"
           >Детальніше</a
         >
-        <button type="button" class="btn btn--hotel-and-rest" data-modal-open>
+        <!-- <button type="button" class="btn btn--hotel-and-rest" data-modal-open> -->
           Переглянути ціни
         </button>
       </div>
