--- a/src/sass/components/_section-title.scss
+++ b/src/sass/components/_section-title.scss
@@ -1,32 +1,33 @@
 .main-title {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.20;
-    letter-spacing: 0.02em;
-    color: $colorWhite;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: $colorWhite;
 
-    @include tablet {
-        font-size: 24px;
-    }
+  @include tablet {
+    font-size: 24px;
+  }
 }
 
 .hotel-title {
-    font-family: 'Times New Roman', serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: 0.05em;
-    color: $colorBlack;
+  font-family: 'Times New Roman', serif;
+  font-style: normal;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.05em;
+  color: $colorBlack;
 
-    @include tablet {
-        font-size: 30px;
-        line-height: 1.13;
-    }
+  @include tablet {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 
-    @include desktop {
-        font-size: 36px;
-    }
+  @include desktop {
+    font-size: 36px;
+  }
 }
