--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -1,4 +1,4 @@
-<section class="section-hotel section-hotel--lemon">
+<section class="room-for-2--section section-hotel section-hotel--lemon">
   <div class="container">
     <div class="hotel-wrap-top">
       <div class="room-wrap-top">
@@ -233,9 +233,10 @@
         <a href="./room-for-2.html" class="btn btn--hotel-and-rest hotel-link"
           >Детальніше</a
         >
-        <!-- <button type="button" class="btn btn--hotel-and-rest" data-modal-open> -->
+        <button type="button" class="btn btn--hotel-and-rest">
           Переглянути ціни
         </button>
+        <!-- data-modal-open -->
       </div>
     </div>
   </div>
