--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,49 +1,55 @@
 <div class="backdrop" data-modal >
   <!-- is-hidden -->
   <div class="modal-price">
-      <button type="button" class="modal-price__close" data-modal-close>
-      <svg class="modal-price__close-icon" width="24" height="24">
+      <button type="button" class="modal-price__btn-close" data-modal-close>
+      <svg class="modal-price__icon-close" width="24" height="24">
           <use href="./images/sprite.svg#icon-close"></use>
       </svg>
       </button>
 
-      <p class="modal-price__title price-form">ЦІНИ НА НОМЕР</p>
-      <p class="modal-price__sub-title price-form">Двомісний люкс</p>
+      <p class="modal-price__title">ЦІНИ НА НОМЕР</p>
+      <p class="modal-price__sub-title">Двомісний люкс</p>
       
-      <form class="modal-price__form">
+      <form class="form form__modal-price">
         <p class="modal-price__text">Категорія номеру</p>
-        <div class="wrapper-group">
-          <div class="wrapper-input cast">
-            <div class="modal-price__input-cast custom-select">
+        <div class="container__form-price">
+          
+          <!-- cast -->
+          <div class="wrapper-input">
+            
+            <!-- custom-select -->
+            <div class="modal-price__input-wrap">
               <input
                 type="number"
                 id="number-cast"
-                name="number-cast"
+                name="number-cast"              
                 class="modal-price__input input-cast"
                 minlength="2"
                 placeholder="1"
                 required
               />
-              <select name="number-cast" id="select-cast" class="modal-price__select custom-select-arrow">
-                <option value="1">Одна</option>
-                <option value="2">Дві</option>
-                <option value="3">Три</option>
-                <option value="4">Чотири</option>
-                <option value="5">П'ять</option>
-              </select>
-              <!-- <div class="shade"></div> -->
-              <!-- <svg class="modal-price__icon" for="select-cast"  width="24" height="24"> 
-                <use href="./images/sprite.svg#icon-ep_arrow-down-bold"></use>
-              </svg> -->
+             <div class="container__modal-price-select">
+                <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
+                  <option value="1">Одна</option>
+                  <option value="2">Дві</option>
+                  <option value="3">Три</option>
+                  <option value="4">Чотири</option>
+                  <option value="5">П'ять</option>
+                </select>
+                <div class="shade"></div>
+              </div>
               
   
             </div>
-            <label for="number-cast" class="modal-price__label">Кількість ночей</label>
+            <label for="number-cast" class="modal-price__label-input">Кількість ночей</label>
             <label for="select-cast" class="modal-price__label-select">Кількість ночей</label>
           </div>
   
-          <div class="wrapper-input wrapper-last">
-            <div class="modal-price__input-cost">
+          <!-- wrapper-input wrapper-last -->
+          <div class="wrapper-input">
+
+            <!-- class="modal-price__input-cost" -->
+            <div class="modal-price__input-wrap">
               <input
                 type="number"
                 id="number-cost"
