--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,4 +1,4 @@
-<div class="backdrop" data-modal >
+<div class="backdrop is-hidden" data-modal >
   <!-- is-hidden -->
   <div class="modal-price">
       <button type="button" class="modal-price__btn-close" data-modal-close>
