--- a/src/partials/modal-room.html
+++ b/src/partials/modal-room.html
@@ -62,7 +62,7 @@
     </div>
     </div>
         </div>
-    <button type="submit" class="modal-room__button">Оформити бронювання</button>
+    <button type="submit" class="modal-room__button" data-modal-close>Оформити бронювання</button>
 </form>
   </div>
 </div>
