add JS "data-price3-modal-open"

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -273,7 +273,7 @@
         <button
           type="button"
           class="room-for-3-btn__price btn btn--hotel-and-rest"
-          data-modal-open
+          data-price3-modal-open
         >
           Переглянути ціни
         </button>
