--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="hotel-wrap-top">
       <div class="room-wrap-top">
-        <p class="hotel-pre-title">Amet minim mollit non</p>
-        <span class="logo hotel-logo">Mimiho</span>
+        <p class="pre-title">Amet minim mollit non</p>
+        <span class="logo-dark hotel-logo">Mimiho</span>
         <h2 class="hotel-title room-title">Двомісний номер</h2>
         <p class="hotel-text">
           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
@@ -15,8 +15,8 @@
         <picture>
           <source
             srcset="
-              ./images/hotel/hotel-1-desk.jpg 1x,
-              ./images/hotel/hotel-1-desk.jpg 2x
+              ./images/hotel/hotel-1-desk.jpg    1x,
+              ./images/hotel/hotel-1-desk-2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
@@ -233,10 +233,9 @@
         <a href="./room-for-2.html" class="btn btn--hotel-and-rest hotel-link"
           >Детальніше</a
         >
-        <button type="button" class="btn btn--hotel-and-rest">
+        <button type="button" class="btn btn--hotel-and-rest" data-modal-open>
           Переглянути ціни
         </button>
-        <!-- data-modal-open -->
       </div>
     </div>
   </div>
