--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,6 +1,20 @@
-.logo {
+.logo-light {
   font-family: 'Film P3';
   text-transform: uppercase;
   @include font(700, 40px, 1.08, 0.3em);
   color: $colorLogoWhite;
+}
+
+.logo-dark {
+  font-family: 'Film P3';
+  text-transform: uppercase;
+  @include font(700, 40px, 1.08, 0.3em);
+  color: $colorLogoGray;
+}
+
+.logo-accent {
+  font-family: 'Film P3';
+  text-transform: uppercase;
+  @include font(700, 40px, 1.08, 0.3em);
+  color: $colorAccentYellow;
 }
