--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -77,7 +77,7 @@
       </li>
     </ul>
 
-    <div class="menu__wrap">
+    <div class="button__wrap">
       <button class="button" data-modal-open>Оформити бронювання</button>
     </div>
     <a href="./hotel.html" class="link__amenities"
